--- a/index.html
+++ b/index.html
@@ -1,67 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Domain - Get your own domain</title>
-    <link rel="stylesheet" href="assets/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-</head>
-<body>
-<!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-nav-dark mb-4 fixed-top" id="navbar">
-    <div class="container-fluid">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- navbar -->
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-nav-dark mb-4 fixed-top"
+      id="navbar"
+    >
+      <div class="container-fluid">
         <a class="navbar-brand" href="index.html">ai.physio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarExample-expand-lg" aria-controls="offcanvasNavbarExample-expand-lg">
-                <span class="navbar-toggler-icon" data-bs-target="#offcanvasNavbarExample-expand-lg"></span>
-            </button>
-        <div class="offcanvas offcanvas-end bg-dark" data-bs-hideresize="true" tabindex="-1" id="offcanvasNavbarExample-expand-lg" aria-labelledby="offcanvasNavbarExample-expand-lg">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasLabel" style="color:white;">ai.physio</h5>
-                <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body bg-nav-dark">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="domain.html">Domains</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">about</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>                            
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbarExample-expand-lg"
+          aria-controls="offcanvasNavbarExample-expand-lg"
+        >
+          <span
+            class="navbar-toggler-icon"
+            data-bs-target="#offcanvasNavbarExample-expand-lg"
+          ></span>
+        </button>
+        <div
+          class="offcanvas offcanvas-end bg-dark"
+          data-bs-hideresize="true"
+          tabindex="-1"
+          id="offcanvasNavbarExample-expand-lg"
+          aria-labelledby="offcanvasNavbarExample-expand-lg"
+        >
+          <div class="offcanvas-header">
+            <h5
+              class="offcanvas-title"
+              id="offcanvasLabel"
+              style="color: white"
+            >
+              ai.physio
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white text-reset"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body bg-nav-dark">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="domain.html">Domains</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Dropdown
+                </a>
+                <ul
+                  class="dropdown-menu dropdown-menu-dark"
+                  aria-labelledby="navbarDropdown"
+                >
+                  <li><a class="dropdown-item" href="#">about</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
         </div>
-    </div>
-</nav>
-<!-- ending navbar  -->
+      </div>
+    </nav>
+    <!-- ending navbar  -->
 
-<section class="wrap-in">
+    <section class="wrap-in">
+      <div class="wrap-inner">
+        <div class="parent_txt_container">
+          <div class="txt_container">
+            <b class="text_size">Every business </b
+            ><b class="text_size"
+              >starts with a <b class="domain_txt">Domain</b></b
+            >
+          </div>
+          <div class="input_container">
+            <div class="domain_container">
+              <div>Domain name</div>
+              <div>
+                <input
+                  type="text"
+                  placeholder="Type your perfect domain"
+                  size="50"
+                  style="height: 40px; border-radius: 10px; padding: 10px"
+                />
+              </div>
+            </div>
+            <div class="domain_container">
+              <div>City</div>
+              <div>
+                <select class="custom-select">
+                  <option value="option1">Option 1</option>
+                  <option value="option2" selected>Option 2</option>
+                  <option value="option3">Option 3</option>
+                </select>
+              </div>
+            </div>
+            <div class="domain_container">
+              <div>.Physio</div>
+              <div>
+                <input
+                  type="text"
+                  placeholder="All types"
+                  size="20"
+                  style="height: 40px; border-radius: 10px; padding: 10px"
+                />
+              </div>
+            </div>
 
-    <div class="wrap-inner">
-        <h1>hello
-        </h1>
-    </div>
-</section>
+            <div class="domain_container-cnt">
+                
+                <div style="justify-content: center;margin-top: 15px;">
+                    <button class="search_btn"><i class="fa fa-search"></i></button>
+                </div>
+              </div>
 
 
-
-</body>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
